add put, delete and non working filters
