# InventoryService/cmd/controllers/item_controller.go
@@ -1,7 +1,11 @@
 package controllers
 
 import (
+	"encoding/json"
+	"inventoryService/m/v2/cmd/models"
+	"inventoryService/m/v2/cmd/resources"
 	"inventoryService/m/v2/ent"
+	"inventoryService/m/v2/ent/ingridient"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -26,23 +30,60 @@ func ResponseJSON(c *gin.Context, httpCode int, msg string, data interface{}) {
 // @BasePath /api/v1
 
 // GetIngridientsList godoc
-// @Summary Gets list of all ingridients
-// @Schemes
+// @Summary 	Gets list of all ingridients
 // @Description Get complete list of all ingridients availible for user
-// @Tags example
-// @Accept json
-// @Produce application/json
-// @Success 200
-// @Router /inventory [get]
+// @Tags 		Inventory manipulation
+// @Accept 		json
+// @Produce 	application/json
+// @Success		200
+// @Router 		/inventory [get]
 func (controller *ItemController) GetIngridientsList(c *gin.Context) {
-	ingridients, err := controller.Client.Ingridient.Query().All(c)
-
-	print("ingridient")
+	ingridients, err := controller.Client.Ingridient.
+		Query().
+		All(c)
 
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": err.Error(),
-		})
+		ResponseJSON(c, http.StatusBadRequest, err.Error(), nil)
+		return
+	}
+
+	ResponseJSON(c, http.StatusOK, "", ingridients)
+}
+
+// @BasePath /api/v1
+
+// GetIngridientsList godoc
+// @Summary 	Gets list of all ingridients
+// @Description Get complete list of all ingridients availible for user
+// @Tags 		Inventory manipulation
+// @Accept 		json
+// @Produce 	application/json
+// @Param 		item query models.ItemModelFilters true "Item to search for"
+// @Success		200
+// @Router 		/ingridient/search [get]
+func (controller *ItemController) GetIngridientByFilter(c *gin.Context) {
+	jsonData, err := c.GetRawData() // TODO actually make it work
+	if err != nil {
+		ResponseJSON(c, http.StatusBadRequest, err.Error(), nil)
+		return
+	}
+
+	var filters models.ItemModelFilters
+	json.Unmarshal(jsonData, &filters)
+
+	ingridients, err := controller.Client.Ingridient.
+		Query().
+		Where(
+			ingridient.And(
+				ingridient.NameContains(filters.Name),
+				ingridient.Alcohol(filters.Alcohol),
+				ingridient.IsDry(filters.IsDry),
+			),
+		).
+		All(c)
+
+	if err != nil {
+		ResponseJSON(c, http.StatusBadRequest, err.Error(), nil)
 		return
 	}
 
@@ -54,29 +95,109 @@ func (controller *ItemController) GetIngridientsList(c *gin.Context) {
 // AddIngridient godoc
 // @Summary 	Adds new ingridient
 // @Description Add new ingridient to database
-// @Tags 		example
+// @Tags 		Inventory manipulation
 // @Accept 		json
 // @Produce 	application/json
-// @Param 		username body M true "username"
-// @Success 	200 {string} Helloworld
+// @Param 		item body models.ItemModelCreate true "Item data"
+// @Success 	200
 // @Router  	/ingridient [post]
 func (controller *ItemController) AddIngridient(c *gin.Context) {
-
-	ingridient, err := controller.Client.Ingridient.
-		Create().
-		SetName("corona").
-		SetAlcohol(0.05).
-		SetMeasurmentUnit("ml").
-		SetIsDry(false).
-		Save(c)
-
-	print(ingridient)
+	jsonData, err := c.GetRawData()
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": err.Error(),
-		})
+		ResponseJSON(c, http.StatusBadRequest, err.Error(), nil)
 		return
 	}
 
-	ResponseJSON(c, http.StatusOK, "", ingridient)
+	var item models.ItemModelCreate
+	json.Unmarshal(jsonData, &item)
+
+	ingridient, err := controller.Client.Ingridient.
+		Create().
+		SetName(item.Name).
+		SetAlcohol(item.Alcohol).
+		SetMeasurmentUnit(ingridient.MeasurmentUnit(item.MeasurmentUnit)).
+		SetIsDry(item.IsDry).
+		Save(c)
+
+	if err != nil {
+		ResponseJSON(c, http.StatusBadRequest, err.Error(), nil)
+		return
+	}
+
+	ResponseJSON(c, http.StatusOK, resources.IngridientAdded, ingridient)
+}
+
+// @BasePath /api/v1
+
+// AddIngridient godoc
+// @Summary 	Adds new ingridient
+// @Description Add new ingridient to database
+// @Tags 		Inventory manipulation
+// @Accept 		json
+// @Produce 	application/json
+// @Param 		item body models.ItemModel true "Item and it's data data"
+// @Success 	200
+// @Router  	/ingridient [put]
+func (controller *ItemController) ChangeIngridient(c *gin.Context) {
+	jsonData, err := c.GetRawData()
+	if err != nil {
+		ResponseJSON(c, http.StatusBadRequest, err.Error(), nil)
+		return
+	}
+
+	var item models.ItemModel
+	json.Unmarshal(jsonData, &item)
+
+	ingridientOld, err := controller.Client.Ingridient.
+		Query().
+		Where(ingridient.ID(item.Id)).
+		Only(c)
+
+	if err != nil {
+		ResponseJSON(c, http.StatusBadRequest, err.Error(), nil)
+		return
+	}
+
+	ingridient, err := ingridientOld.
+		Update().
+		SetName(item.Name).
+		SetAlcohol(item.Alcohol).
+		SetIsDry(item.IsDry).
+		SetMeasurmentUnit(ingridient.MeasurmentUnit(item.MeasurmentUnit)).
+		Save(c)
+
+	if err != nil {
+		ResponseJSON(c, http.StatusBadRequest, err.Error(), nil)
+		return
+	}
+
+	ResponseJSON(c, http.StatusOK, resources.IngridientUpdated, ingridient)
+}
+
+// @BasePath /api/v1
+
+// AddIngridient godoc
+// @Summary 	Adds new ingridient
+// @Description Add new ingridient to database
+// @Tags 		Inventory manipulation
+// @Accept 		json
+// @Produce 	application/json
+// @Param 		itemId query models.ItemModelDelete true "itemId"
+// @Success 	200
+// @Router  	/ingridient [delete]
+func (controller *ItemController) DeleteIngridient(c *gin.Context) {
+	jsonData, err := c.GetRawData()
+	if err != nil {
+		ResponseJSON(c, http.StatusBadRequest, err.Error(), nil)
+		return
+	}
+
+	var itemIdObject models.ItemModelDelete
+	json.Unmarshal(jsonData, &itemIdObject)
+
+	controller.Client.Ingridient.
+		DeleteOneID(itemIdObject.Id).
+		Exec(c)
+
+	ResponseJSON(c, http.StatusOK, resources.IngridientDeleted, nil)
 }
