# InventoryService/cmd/main.go
@@ -54,6 +54,9 @@ func runHttpServer(itemController controllers.ItemController) {
 	r.GET(docs.SwaggerInfo.BasePath+"/ping", ping)
 	r.GET(docs.SwaggerInfo.BasePath+"/inventory", itemController.GetIngridientsList)
 	r.POST(docs.SwaggerInfo.BasePath+"/ingridient", itemController.AddIngridient)
+	r.PUT(docs.SwaggerInfo.BasePath+"/ingridient", itemController.ChangeIngridient)
+	r.DELETE(docs.SwaggerInfo.BasePath+"/ingridient", itemController.DeleteIngridient)
+	r.GET(docs.SwaggerInfo.BasePath+"/ingridient/search", itemController.GetIngridientByFilter)
 
 	// api doc http://localhost:8080/swagger/index.html
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
@@ -75,7 +78,7 @@ func closeDatabase() {
 // @Summary ping
 // @Schemes
 // @Description do ping
-// @Tags example
+// @Tags Common
 // @Accept json
 // @Produce json
 // @Success 200 {string} Helloworld
