# InventoryService/ent/schema/ingridient.go
@@ -16,10 +16,10 @@ type Ingridient struct {
 func (Ingridient) Fields() []ent.Field {
 	return []ent.Field{
 		field.UUID("id", uuid.UUID{}).Default(uuid.New).StorageKey("id"),
-		field.String("name").Unique(),
+		field.String("name").Unique().NotEmpty(),
 		field.Float("alcohol").Default(0),
-		field.Bool("isDry"),
-		field.Enum("measurmentUnit").Values("ml", "g", "pcs"),
+		field.Bool("isDry").Default(false),
+		field.Enum("measurmentUnit").Values("ml", "g", "pcs").Default("ml"),
 	}
 }
 
